workloads/devbevy/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: authserver-dev
  labels:
    app: authserver-dev
spec:
  type: ExternalName
  selector:
    app: authserver-dev
  ports:
    - port: 80
      targetPort: 12143
      protocol: TCP
      name: http-authserver
  externalName: 192.168.1.35
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-dev
  labels:
    app: webserver-dev
spec:
  type: ExternalName
  selector:
    app: webserver-dev
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http-webserver
  externalName: 192.168.1.35
