workloads/devbevy/ingresses.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authserver-nostripped-dev
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: auth-dev-rots-https
  hostnames:
    - auth.dev.rots.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authserver-dev-externalip
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver-nostripped-dev
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: dev-rots-https
  hostnames:
    - dev.rots.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webserver-dev-externalip
          port: 8080
